# smarts

./: CLAUDE.md  Cargo.toml  README.md  book.toml
examples/: basic_usage.rs
md/: SUMMARY.md  introduction.md
src/: conversation.rs  error.rs  lib.rs  models.rs
tests/: integration_test.rs
